修正生成Retina CSS部分一个严重的逻辑错误，去除重复选择器生成；完善测试用例；添加`grunt jshint`任务

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-css-sprite",
   "description": "A grunt plugin to help front engineer creating css sprite.",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "homepage": "https://github.com/laoshu133/grunt-css-sprite",
   "author": {
     "name": "mikongge",
@@ -33,7 +33,8 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "gm": "*"
+    "gm": "*",
+    "grunt-contrib-jshint": "~0.8.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
