--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-css-sprite",
   "description": "A grunt plugin to help front engineer creating css sprite.",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "homepage": "https://github.com/laoshu133/grunt-css-sprite",
   "author": {
     "name": "Mikongge",
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "spritesmith": "~1.1.0"
+    "spritesmith": "~1.1.0",
+    "css-spritesmith": "~0.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
